--- a/src/css/BookForm.css
+++ b/src/css/BookForm.css
@@ -1,6 +1,6 @@
 .form-template{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
