--- a/src/css/BookList.css
+++ b/src/css/BookList.css
@@ -3,24 +3,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em;
+    padding: 0;
+    margin: 0;
     
     border-radius: 1em;
     justify-content: center;
 }
 
 .book-list-form{
-    max-width: 15em;
+    max-width: 30em;
     display: flex;
     flex-direction: row;
     background-color: rgb(255, 210, 126);
-    border-radius: 1em;
     padding: 1em;
     flex-wrap: wrap;
     justify-content:last baseline;
-    max-height: 30em;
+    max-height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    margin: 0;
 }
 
 .searching-form{
@@ -29,9 +30,9 @@
     flex-direction: column;
     background-color:rgb(255, 166, 0);
 
-    border-radius: 1em;
     padding: 1em;
-    max-height: 30em;
+    max-height: 100vh;
+
     overflow-y: auto;
     overflow-x: hidden;
     margin-left: 1em;
@@ -45,4 +46,5 @@
 .book-list{
     display: flex;
     flex-direction: row;
+    max-height: 100vh;
 }
